// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-loading-indicator component should apply the description prop as an aria-label 1`] = `
<ic-loading-indicator description="IC Loading Indicator Test" size="default" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="IC Loading Indicator Test" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should be styled correctly by setting the class names for the chosen indicator type 1`] = `
<ic-loading-indicator size="default" type="linear">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-valuemax="100" aria-valuemin="0" class="ic-loading-linear-outer indeterminate" role="progressbar">
        <div class="ic-loading-linear-inner"></div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should not display a label is the size is 'icon' 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" size="icon" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should render a determinate loading indicator with the correct label and aria 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" progress="30" size="default" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-labelledby="ic-loading-label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="30" class="determinate ic-loading-circular-outer" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0" style="--progress-value: 30;"></circle>
          </svg>
        </div>
      </div>
      <ic-typography class="ic-loading-label ic-typography-h4" id="ic-loading-label" role="status">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <p>
          IC Loading Indicator Test
        </p>
      </ic-typography>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should render an indeterminate loading indicator with the correct label and set aria-labelledby 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" size="default" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-labelledby="ic-loading-label" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
      <ic-typography class="ic-loading-label ic-typography-h4" id="ic-loading-label" role="status">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <p>
          IC Loading Indicator Test
        </p>
      </ic-typography>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should render linear determinate progress bar 1`] = `
<ic-loading-indicator max="50" min="10" progress="30" size="default" type="linear">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-valuemax="50" aria-valuemin="10" aria-valuenow="30" class="determinate ic-loading-linear-outer" role="progressbar">
        <div class="clip ic-loading-linear-inner" style="--linear-width: 50%;"></div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should render linear indeterminate progress bar 1`] = `
<ic-loading-indicator size="default" type="linear">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-valuemax="100" aria-valuemin="0" class="ic-loading-linear-outer indeterminate" role="progressbar">
        <div class="ic-loading-linear-inner"></div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should set the correct aria if min and max are provided 1`] = `
<ic-loading-indicator max="50" min="10" progress="30" size="default" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-valuemax="50" aria-valuemin="10" aria-valuenow="30" class="determinate ic-loading-circular-outer" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0" style="--progress-value: 30;"></circle>
          </svg>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should set the typography variant for the label to 'h2' for the 'large' size 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" size="large" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-labelledby="ic-loading-label" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
      <ic-typography class="ic-loading-label ic-typography-h2" id="ic-loading-label" role="status">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <p>
          IC Loading Indicator Test
        </p>
      </ic-typography>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should set the typography variant for the label to 'h4' for the 'default' size 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" size="default" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-labelledby="ic-loading-label" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
      <ic-typography class="ic-loading-label ic-typography-h4" id="ic-loading-label" role="status">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <p>
          IC Loading Indicator Test
        </p>
      </ic-typography>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;

exports[`ic-loading-indicator component should set the typography variant for the label to 'label' for the 'small' size 1`] = `
<ic-loading-indicator class="label" label="IC Loading Indicator Test" size="small" type="circular">
  <mock:shadow-root>
    <div class="ic-loading-container">
      <div aria-label="Loading" aria-labelledby="ic-loading-label" aria-valuemax="100" aria-valuemin="0" class="ic-loading-circular-outer indeterminate" role="progressbar">
        <div class="ic-loading-circular-inner">
          <svg class="ic-loading-circular-svg" viewBox="0 0 0 0">
            <circle cx="0" cy="0" r="0"></circle>
            <circle cx="0" cy="0" r="0"></circle>
          </svg>
        </div>
      </div>
      <ic-typography class="ic-loading-label ic-typography-label" id="ic-loading-label" role="status">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <p>
          IC Loading Indicator Test
        </p>
      </ic-typography>
    </div>
  </mock:shadow-root>
</ic-loading-indicator>
`;
